# ucom

./: .gitignore  Cargo.toml  README.md
src/: args.rs  build_script.rs  cli.rs  cli_add.rs  cli_build.rs  cli_new.rs  cli_run.rs  cli_test.rs  cmd.rs  cmd_build.rs  cmd_check_updates.rs  cmd_list.rs  cmd_new.rs  cmd_open.rs  cmd_project_info.rs  cmd_run.rs  command_ext.rs  commands.rs  consts.rs  main.rs  packages.rs  release_notes.rs  style_definitions.rs  unity.rs  unity_cmd.rs  unity_data.rs  unity_project.rs  unity_release.rs  unity_version.rs
src/commands/: add.rs  add_cmd.rs  build_cmd.rs  build_project.rs  check_cmd.rs  check_updates.rs  info_cmd.rs  install_cmd.rs  list_cmd.rs  list_versions.rs  mod.rs  new_cmd.rs  new_project.rs  open_cmd.rs  open_project.rs  project_info.rs  run_cmd.rs  run_unity.rs  status_line.rs  term_stat.rs  terminal_spinner.rs  test_cmd.rs  updates_cmd.rs
src/commands/include/: EditorMenu.cs  UcomBuilder.cs  UnityBuilder.cs  unity-gitattributes.txt
src/include/: UcomBuilder.cs  unity-gitignore.txt
src/nunit/: data_structures.rs  elements.rs  mod.rs  tests.rs
src/nunit/test_data/: editmode-fail.xml  editmode.xml  empty-properties.xml  playmode-fail.xml  standalone-fail.xml  standalone.xml
src/unity/: content_cache.rs  editor_process.rs  http_cache.rs  installations.rs  installed.rs  mod.rs  non_empty_vec.rs  project.rs  release_api.rs  release_api_data.rs  releases.rs  spawn_cmd.rs  unity_project.rs  unity_releases.rs  unity_version.rs  vec1.rs  version.rs
src/unity/test_data/: ProjectSettings.asset  unity_2017_1_0.html  unity_2017_2_5.html  unity_2021_3_17.html  unity_2022_2_0.html  unity_5_0_0.html  unity_download_archive.html
src/utils/: content_cache.rs  formatter.rs  mod.rs  path_ext.rs  report.rs  spawn_cmd.rs  status_line.rs  vec1.rs
templates/: EditorMenu.cs  UnityBuilder.cs  gitattributes.txt
test_data/: unity_2017_1_0.html  unity_2017_2_5.html  unity_2022_2_0.html  unity_5_0_0.html
