[package]
name = "ucom"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
trivially_copy_pass_by_ref = "warn"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
crossterm = "0.28"
dirs = "5.0"
indexmap = "2.7"
itertools = "0.14"
path-absolutize = "3.1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
yansi = "1.0"
