[package]
name = "ucom"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[profile.release]
lto = "thin"
strip = true

[lints.clippy]
trivially_copy_pass_by_ref = "warn"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
crossterm = "0.29"
dirs = "6.0"
itertools = "0.14"
path-absolutize = "3.1"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.37"
ureq = { version = "3.1", features = ["json"] }
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
yansi = { version = "1.0", features = ["hyperlink"] }
regex = "1.12"
